--- a/withdraw.html
+++ b/withdraw.html
@@ -103,24 +103,24 @@
         </thead>
         <tbody class="text-gray-800">
           <tr>
-            <td class="px-6 py-4">user429</td>
-            <td class="px-6 py-4">05/15/2025</td>
-            <td class="px-6 py-4">Tether</td>
-            <td class="px-6 py-4">$108.00</td>
+            <td class="px-6 py-4">user09</td>
+            <td class="px-6 py-4">05/16/2025</td>
+            <td class="px-6 py-4">Paypal </td>
+            <td class="px-6 py-4">$420.00</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
           <tr>
-            <td class="px-6 py-4">user203</td>
-            <td class="px-6 py-4">05/15/2025</td>
-            <td class="px-6 py-4">Payoneer</td>
-            <td class="px-6 py-4">$100.00</td>
+            <td class="px-6 py-4">user173</td>
+            <td class="px-6 py-4">05/16/2025</td>
+            <td class="px-6 py-4">Bitcoin</td>
+            <td class="px-6 py-4">$65.20</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
           <tr>
             <td class="px-6 py-4">user281</td>
-            <td class="px-6 py-4">05/15/2025</td>
-            <td class="px-6 py-4">Tether</td>
-            <td class="px-6 py-4">$72.00</td>
+            <td class="px-6 py-4">05/16/2025</td>
+            <td class="px-6 py-4">Wire transfer</td>
+            <td class="px-6 py-4">$197.50</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
         </tbody>
