--- a/offer.html
+++ b/offer.html
@@ -59,7 +59,7 @@
               </div>
               <div class="ml-4">
                 <p class="text-gray-500 text-sm">Total Offers</p>
-                <p class="text-2xl font-bold text-gray-800">3</p>
+                <p class="text-2xl font-bold text-gray-800">4</p>
               </div>
             </div>
           </div>
@@ -71,7 +71,7 @@
               </div>
               <div class="ml-4">
                 <p class="text-gray-500 text-sm">Top Payout</p>
-                <p class="text-2xl font-bold text-gray-800">$1.75 / Lead</p>
+                <p class="text-2xl font-bold text-gray-800">$5.50 / Sales</p>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
               </div>
               <div class="ml-4">
                 <p class="text-gray-500 text-sm">Active Campaigns</p>
-                <p class="text-2xl font-bold text-gray-800">3</p>
+                <p class="text-2xl font-bold text-gray-800">2</p>
               </div>
             </div>
           </div>
@@ -128,7 +128,22 @@
               </div>
             </div>
           </div>
+          
+             <!-- Offer Card -->
+          <div class="bg-white shadow-lg rounded-lg hover:shadow-2xl transition">
+            <div class="p-6">
+              <h3 class="text-xl font-bold text-gray-800"> Get more sales </h3>
+              <p class="text-gray-600 mt-2">Earn $0.75 per valid click. High-converting offer for US traffic and get more sales.</p>
+              <div class="mt-4 flex items-center justify-between">
+                <span class="text-blue-600 font-semibold">$0.75 / Click</span>
+                <button onclick="openModal('Get traffic from only USA. Your offer link ', '$0.75 / Click', 'Active')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">Promote</button>
+                <br>
+               <a href="https://www.amazon.com/Nutrex-Research-Anabolic-Shredding-Supplement/dp/B0CT66FPRP/ref=sr_1_3?dib=eyJ2IjoiMSJ9.jVDLdQROvagn0uDlzjV0X-u2B6rrDp86LM43T1io3GgBdNIeEnJ9M6nzH5o0lj8RCOYMeOu9j_uXgtpdZDALXA0F_Y8gmZNjKPV3No94oGIy_t_wEXuRPbT_WKUgSgBsdpZQ1nzsKacsM27LdtpI6FBOvgvpHSjCSLnFBcP9NULTWIhNOlzSYMN3h8_XPr-JvSZcfNy9wKZX1B-mr_UUX_9yrUAgOaOv6bNAY9RGrXndTO_Auvl-6LTx88wJlJigtRaRU_qYmodlhHzY-B5dNd5ulbQEbzxVDrhUywE2iZ4.8N_9Nz51JMzfsX6HMxCvnu_Gw_fqIuDZstoPNUxE8Zg&dib_tag=se&hvadid=410041490350&hvdev=c&hvexpln=0&hvlocphy=1001442&hvnetw=g&hvocijid=18227652219119210383--&hvqmt=b&hvrand=18227652219119210383&hvtargid=kwd-321080171739&hydadcr=21883_11242022&keywords=muscle+enhancement+for+men&mcid=59ccbfca730b3ba0b19716b649a4b948&qid=1747377981&sr=8-3" class="px-4 py-2 bg-gray-800 text-white text-sm rounded hover:bg-gray-900">View Offer</a>
+              </div>
+            </div>
+          </div>
 
+          
         </div>
 
       </main>
