--- a/dashboard.html
+++ b/dashboard.html
@@ -113,7 +113,7 @@
 
           <!-- Profile Actions -->
           <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
-          <a href="https://cpapro.github.io/cpapro/home.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Logout</a>
+          <a href="https://cpapro.github.io/cpapro/home.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Sign out</a>
         </div>
       </div>
     </div>
@@ -191,6 +191,13 @@
                   <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
               </tr>
+               <tbody>
+              <tr class="hover:bg-gray-50 transition">
+                <td class="py-4 px-6 font-medium">Get more sales </td>
+                <td class="py-4 px-6 text-blue-600">$0.75 / Click </td>
+                <td class="py-4 px-6">
+                  <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Active</span>
+                </td>
             </tbody>
           </table>
         </div>
