--- a/offer.html
+++ b/offer.html
@@ -97,13 +97,20 @@
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-800">Sales </h3>
               <p class="text-gray-600 mt-2">Earn $0.80 per valid click. High-converting offer for US traffic.</p>
-              <div class="mt-4 flex items-center justify-between">
-                <span class="text-blue-600 font-semibold">$0.80 / Click</span>
-                <button onclick="openModal('Get traffic from only USA. Your offer link ', '$0.80 / Click', 'Active')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">Promote</button>
-               <a href="https://www.ebay.com.au/itm/365484026039?_trkparms=amclksrc%3DITM%26aid%3D1110006%26algo%3DHOMESPLICE.SIM%26ao%3D1%26asc%3D286129%26meid%3D9ccd0b7cf3824fe5afe5686e02d77ad1%26pid%3D101224%26rk%3D1%26rkt%3D5%26sd%3D116520774125%26itm%3D365484026039%26pmt%3D1%26noa%3D0%26pg%3D2332490%26algv%3DDefaultOrganicWebV9BertRefreshRankerWithCassiniEmbRecall%26brand%3DSHEIKE&_trksid=p2332490.c101224.m-1&itmprp=cksum%3A3654840260399ccd0b7cf3824fe5afe5686e02d77ad1%7Cenc%3AAQAKAAABIFpV4T02GSLWmLmcYHS%252Bawhg9HB3NVAH8KQdy74hckvfm%252BTv7AoY9bWSvyrWMwnykYfzYbkMtous8borg3MTxgd9tl5kE%252FFY8Nh52FKy%252FtTeeyhcAkvtu32jSaqVeGXVCsnpj0w%252FWD4KE0V7NMqiRwlhayzcH3fFdiTeET4liKYsIXChsSgelHaXjqp3R8BMiKDfMW%252FKCiRi5BYQGCmYDS8vTE%252BHEQNy3q4LGicyf%252BOEVp7AqJ3%252FJpRAX5CWKDuPemqOAFXPT2dnd4eHctPEXWVpz0jHKkPattQFBg6V%252BmhGkZvF5WNXKBWPwhIh1a0WWdnal6WuopRnmwaBof34gCMJYOhFzcET5E9sZ76mv%252BbyWBhuCnFSkre9jpN61ZtdxQ%253D%253D%7Campid%3APL_CLK%7Cclp%3A2332490&itmmeta=01JVA90HEFXX7SMBDD4ERK735W" class="px-4 py-2 bg-gray-800 text-white text-sm rounded hover:bg-gray-900">View Offer</a>
-              </div>
-            </div>
-          </div>
+            <div class="mt-4 flex items-center justify-between">
+  <span class="text-blue-600 font-semibold">$0.80 / Click</span>
+  
+  <!-- Group buttons together and add spacing -->
+  <div class="flex space-x-2">
+    <button onclick="openModal('Get traffic from only USA. Your offer link ', '$0.80 / Click', 'Active')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">
+      Promote
+    </button>
+    <a href="https://tinyurl.com/sheikewomens" class="px-4 py-2 bg-gray-800 text-white text-sm rounded hover:bg-gray-900">
+      View Offer
+    </a>
+  </div>
+</div>
+
 
           <!-- Offer Card -->
           <div class="bg-white shadow-lg rounded-lg hover:shadow-2xl transition">
@@ -134,14 +141,20 @@
             <div class="p-6">
               <h3 class="text-xl font-bold text-gray-800"> Get more sales </h3>
               <p class="text-gray-600 mt-2">Earn $0.75 per valid click. High-converting offer for US traffic and get more sales.</p>
-              <div class="mt-4 flex items-center justify-between">
-                <span class="text-blue-600 font-semibold">$0.75 / Click</span>
-                <button onclick="openModal('Get traffic from only USA. Your offer link ', '$0.75 / Click', 'Active')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">Promote</button>
-                <br>
-               <a href="https://www.amazon.com/Nutrex-Research-Anabolic-Shredding-Supplement/dp/B0CT66FPRP/ref=sr_1_3?dib=eyJ2IjoiMSJ9.jVDLdQROvagn0uDlzjV0X-u2B6rrDp86LM43T1io3GgBdNIeEnJ9M6nzH5o0lj8RCOYMeOu9j_uXgtpdZDALXA0F_Y8gmZNjKPV3No94oGIy_t_wEXuRPbT_WKUgSgBsdpZQ1nzsKacsM27LdtpI6FBOvgvpHSjCSLnFBcP9NULTWIhNOlzSYMN3h8_XPr-JvSZcfNy9wKZX1B-mr_UUX_9yrUAgOaOv6bNAY9RGrXndTO_Auvl-6LTx88wJlJigtRaRU_qYmodlhHzY-B5dNd5ulbQEbzxVDrhUywE2iZ4.8N_9Nz51JMzfsX6HMxCvnu_Gw_fqIuDZstoPNUxE8Zg&dib_tag=se&hvadid=410041490350&hvdev=c&hvexpln=0&hvlocphy=1001442&hvnetw=g&hvocijid=18227652219119210383--&hvqmt=b&hvrand=18227652219119210383&hvtargid=kwd-321080171739&hydadcr=21883_11242022&keywords=muscle+enhancement+for+men&mcid=59ccbfca730b3ba0b19716b649a4b948&qid=1747377981&sr=8-3" class="px-4 py-2 bg-gray-800 text-white text-sm rounded hover:bg-gray-900">View Offer</a>
-              </div>
-            </div>
-          </div>
+           <div class="mt-4 flex items-center justify-between">
+  <span class="text-blue-600 font-semibold">$0.75 / Click</span>
+  
+  <!-- Group buttons together and add spacing -->
+  <div class="flex space-x-2">
+    <button onclick="openModal('Get traffic from only USA. Your offer link ', '$0.80 / Click', 'Active')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">
+      Promote
+    </button>
+    <a href="https://tinyurl.com/4jyzw6wu" class="px-4 py-2 bg-gray-800 text-white text-sm rounded hover:bg-gray-900">
+      View Offer
+    </a>
+  </div>
+</div>
+
 
           
         </div>
