--- a/dashboard.html
+++ b/dashboard.html
@@ -171,8 +171,8 @@
             </thead>
             <tbody>
               <tr class="hover:bg-gray-50 transition">
-                <td class="py-4 px-6 font-medium">Click and Earn</td>
-                <td class="py-4 px-6 text-blue-600">$0.87 / Click</td>
+                <td class="py-4 px-6 font-medium"> Sales </td>
+                <td class="py-4 px-6 text-blue-600">$0.80 / Click</td>
                 <td class="py-4 px-6">
                   <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
@@ -222,15 +222,21 @@
                 </td>
               </tr>
               <tr class="hover:bg-gray-50 transition">
-                <td class="py-4 px-6 font-medium">Click and Earn</td>
+                <td class="py-4 px-6 font-medium">Sales</td>
                 <td class="py-4 px-6">
-                  <span class="bg-red-100 text-red-600 text-xs px-3 py-1 rounded-full">Inactive</span>
+                  <span class="bg-green-100 text-green-600 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
               </tr>
               <tr class="hover:bg-gray-50 transition">
                 <td class="py-4 px-6 font-medium">Survey Complete</td>
                 <td class="py-4 px-6">
                   <span class="bg-red-100 text-red-600 text-xs px-3 py-1 rounded-full">Inactive</span>
+                </td>
+              </tr>
+               <tr class="hover:bg-gray-50 transition">
+                <td class="py-4 px-6 font-medium"> Get more sales </td>
+                <td class="py-4 px-6">
+                  <span class="bg-green-100 text-green-600 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
               </tr>
             </tbody>
@@ -245,25 +251,12 @@
           <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
             <div class="flex items-center space-x-3">
               <span class="text-2xl">🎉</span>
-              <span class="font-medium text-gray-700">New Offer "Click and Earn" Added!</span>
+              <span class="font-medium text-gray-700">New Offer "Get more sales " Added!</span>
             </div>
-            <span class="text-xs text-gray-500">2 hours ago</span>
+            <span class="text-xs text-gray-500">1 hour ago</span>
           </div>
-          <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
-            <div class="flex items-center space-x-3">
-              <span class="text-2xl">💰</span>
-              <span class="font-medium text-gray-700">Payment of $25 Sent to PayPal</span>
-            </div>
-            <span class="text-xs text-gray-500">1 day ago</span>
-          </div>
-          <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
-            <div class="flex items-center space-x-3">
-              <span class="text-2xl">⚙️</span>
-              <span class="font-medium text-gray-700">Profile Settings Updated</span>
-            </div>
-            <span class="text-xs text-gray-500">3 days ago</span>
-          </div>
-        </div>
+         
+        
       </section>
 
     </main>
