--- a/Home.html
+++ b/Home.html
@@ -19,10 +19,13 @@
   <header class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-indigo-600">CPA Mastery</h1>
-      <nav class="space-x-6">
+      <nav class="flex items-center space-x-4">
         <a href="index.html" class="text-gray-700 hover:text-indigo-600 font-medium">Home</a>
         <a href="how-it-works.html" class="text-gray-700 hover:text-indigo-600 font-medium">How It Works</a>
-        <a href="signin.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">Sign In</a>
+        <div class="flex flex-col space-y-2">
+          <a href="signin.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md text-center">Sign In</a>
+          
+        </div>
         <a href="signup.html" class="bg-gray-100 hover:bg-gray-200 text-indigo-600 px-4 py-2 rounded-md">Sign Up</a>
       </nav>
     </div>
@@ -58,12 +61,21 @@
     </div>
   </section>
 
+  <!-- Pro Access Button Section -->
+  <section class="py-12 bg-indigo-50 text-center">
+    <div class="max-w-3xl mx-auto px-4">
+      <h4 class="text-2xl font-bold text-indigo-700 mb-4">Want Exclusive Tools and Strategies?</h4>
+      <p class="text-gray-600 mb-6">Upgrade to CPA Mastery Pro and unlock premium resources to boost your earnings faster.</p>
+      <a href="pro.html" class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-md text-lg font-semibold transition">Access Pro Features</a>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="bg-gray-100 text-center py-6 mt-16">
     <p class="text-gray-600">© 2025 CPA Mastery. All rights reserved.</p>
   </footer>
 
-  <!-- Tailwind Animation Plugin (Optional) -->
+  <!-- Tailwind Animation Script -->
   <script>
     document.querySelector('.animate-fadeIn').classList.add('opacity-0');
     setTimeout(() => {
@@ -71,5 +83,6 @@
       document.querySelector('.animate-fadeIn').classList.add('transition', 'duration-1000', 'ease-in-out', 'opacity-100');
     }, 100);
   </script>
+
 </body>
 </html>
