--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     .hero-bg {
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://source.unsplash.com/1600x900/?digital-marketing,ads');
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://source.unsplash.com/1600x900/?digital-marketing,ads');
       background-size: cover;
       background-position: center;
     }
@@ -19,27 +19,15 @@
   <header class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-indigo-600">CPA Mastery</h1>
-      <nav class="space-x-6 hidden md:flex">
+      <nav class="flex items-center space-x-4">
         <a href="index.html" class="text-gray-700 hover:text-indigo-600 font-medium">Home</a>
-        <a href="work2.html" class="text-gray-700 hover:text-indigo-600 font-medium">How It Works</a>
-        <a href="signin.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">Sign In</a>
+        <a href="how-it-works.html" class="text-gray-700 hover:text-indigo-600 font-medium">How It Works</a>
+        <div class="flex flex-col space-y-2">
+          <a href="signin.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md text-center">Sign In</a>
+          
+        </div>
         <a href="signup.html" class="bg-gray-100 hover:bg-gray-200 text-indigo-600 px-4 py-2 rounded-md">Sign Up</a>
       </nav>
-
-      <!-- Mobile Menu -->
-      <div class="md:hidden">
-        <button class="text-gray-700 hover:text-indigo-600" id="mobile-menu-btn">
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="hidden" id="mobile-menu">
-          <nav class="space-y-4 mt-4">
-            <a href="index.html" class="block text-gray-700 hover:text-indigo-600">Home</a>
-            <a href="work2.html" class="block text-gray-700 hover:text-indigo-600">How It Works</a>
-            <a href="signin.html" class="block bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">Sign In</a>
-            <a href="signup.html" class="block bg-gray-100 hover:bg-gray-200 text-indigo-600 px-4 py-2 rounded-md">Sign Up</a>
-          </nav>
-        </div>
-      </div>
     </div>
   </header>
 
@@ -57,19 +45,28 @@
     <div class="max-w-7xl mx-auto px-6 text-center">
       <h3 class="text-3xl font-extrabold text-indigo-700 mb-8">Why Choose CPA Mastery?</h3>
       <div class="grid md:grid-cols-3 gap-8">
-        <div class="bg-indigo-50 p-6 rounded-lg shadow-lg">
+        <div>
           <h4 class="text-xl font-bold mb-2">High Payout Offers</h4>
           <p class="text-gray-600">Get access to high-converting and high-paying CPA offers across multiple niches.</p>
         </div>
-        <div class="bg-indigo-50 p-6 rounded-lg shadow-lg">
+        <div>
           <h4 class="text-xl font-bold mb-2">Beginner-Friendly</h4>
           <p class="text-gray-600">No experience needed. Our step-by-step training will guide you to success.</p>
         </div>
-        <div class="bg-indigo-50 p-6 rounded-lg shadow-lg">
+        <div>
           <h4 class="text-xl font-bold mb-2">Real-Time Analytics</h4>
           <p class="text-gray-600">Track your performance and optimize your campaigns in real-time with our dashboard.</p>
         </div>
       </div>
+    </div>
+  </section>
+
+  <!-- Pro Access Button Section -->
+  <section class="py-12 bg-indigo-50 text-center">
+    <div class="max-w-3xl mx-auto px-4">
+      <h4 class="text-2xl font-bold text-indigo-700 mb-4">Want Exclusive Tools and Strategies?</h4>
+      <p class="text-gray-600 mb-6">Upgrade to CPA Mastery Pro and unlock premium resources to boost your earnings faster.</p>
+      <a href="pro.html" class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-md text-lg font-semibold transition">Access Pro Features</a>
     </div>
   </section>
 
@@ -78,20 +75,14 @@
     <p class="text-gray-600">© 2025 CPA Mastery. All rights reserved.</p>
   </footer>
 
-  <!-- Tailwind Animation Plugin (Optional) -->
+  <!-- Tailwind Animation Script -->
   <script>
     document.querySelector('.animate-fadeIn').classList.add('opacity-0');
     setTimeout(() => {
       document.querySelector('.animate-fadeIn').classList.remove('opacity-0');
       document.querySelector('.animate-fadeIn').classList.add('transition', 'duration-1000', 'ease-in-out', 'opacity-100');
     }, 100);
-
-    // Mobile Menu Toggle
-    const mobileMenuBtn = document.getElementById("mobile-menu-btn");
-    const mobileMenu = document.getElementById("mobile-menu");
-    mobileMenuBtn.addEventListener("click", () => {
-      mobileMenu.classList.toggle("hidden");
-    });
   </script>
+
 </body>
 </html>
