--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="max-w-3xl mx-auto px-4">
       <h4 class="text-2xl font-bold text-indigo-700 mb-4">Want Exclusive Tools and Strategies?</h4>
       <p class="text-gray-600 mb-6">Upgrade to CPA Mastery Pro and unlock premium resources to boost your earnings faster.</p>
-      <a href="https://cpapro.github.io/cpapro/signin.html" class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-md text-lg font-semibold transition">Access Pro Features</a>
+      <a href="signin2.html" class="bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-md text-lg font-semibold transition">Access Pro Features</a>
     </div>
   </section>
 
