--- a/signin2.html
+++ b/signin2.html
@@ -24,7 +24,7 @@
   <!-- Sign In Section -->
   <main class="flex items-center justify-center min-h-screen bg-gray-50">
     <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-8">
-      <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Email</h2>
+      <h2 class="text-3xl font-bold text-center text-blue-600 mb-6"> Sign in to Pro </h2>
       
       <form id="signInForm" class="space-y-5">
         <div>
