--- a/signin2.html
+++ b/signin2.html
@@ -86,7 +86,7 @@
 
       if (allowedEmails.includes(email)) {
         // Redirect to dashboard
-        window.location.href = "dashboard.html";
+        window.location.href = "dash2.html";
       } else {
         alert("This email is not authorized. Please use a valid email.");
       }
