--- a/signin2.html
+++ b/signin2.html
@@ -85,10 +85,10 @@
       const email = document.getElementById("refid").value.trim().toLowerCase();
 
       if (allowedEmails.includes(email)) {
-        // Redirect to dashboard
+        // Redirect to dash2.html
         window.location.href = "dash2.html";
       } else {
-        alert("This email is not authorized. Please use a valid email.");
+        alert("This email is not authorized for pro. Please use a valid email.");
       }
     });
   </script>
