--- a/signin2.html
+++ b/signin2.html
@@ -85,8 +85,8 @@
       const email = document.getElementById("refid").value.trim().toLowerCase();
 
       if (allowedEmails.includes(email)) {
-        // Redirect to dash2.html
-        window.location.href = "dash2.html";
+        // Redirect to dash.html
+        window.location.href = "dash.html";
       } else {
         alert("This email is not authorized for pro. Please use a valid email.");
       }
