--- a/signin2.html
+++ b/signin2.html
@@ -77,7 +77,8 @@
 	  "mahmudsiddiki24@gmail.com",
 	  "sohalmst6903@gmail.com",
 	  "aniksaniks2645@gmail.com",
-	"mdsshwn@gmail.com"
+	"mdsshwn@gmail.com",
+	    "yashinsk92@gmail.com"
     ];
 
     document.getElementById("signInForm").addEventListener("submit", function(e) {
