--- a/dash.html
+++ b/dash.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,16 +29,16 @@
       <div id="mobileProfileDropdown" class="absolute right-0 mt-2 w-64 bg-white border rounded-lg shadow-lg py-2 hidden z-50">
         <div class="px-4 py-2 border-b">
           <p class="text-sm text-gray-600"><strong>User ID:</strong> 3271</p>
-          <p class="text-sm text-gray-600"><strong>Ref ID:</strong> Zoomexa128</p>
+          <p class="text-sm text-gray-600"><strong>Ref ID:</strong> zpro111 </p>
         </div>
         <div class="px-4 py-3 space-y-2 border-b">
           <label class="flex items-center space-x-2">
             <input type="radio" name="mobilePlan" checked disabled class="text-blue-500" />
-            <span class="text-sm text-gray-700 font-medium">Basic Plan (Selected)</span>
+            <span class="text-sm text-gray-700 font-medium">Professional Plan (Selected)</span>
           </label>
           <label class="flex items-center space-x-2 opacity-50 cursor-not-allowed">
             <input type="radio" name="mobilePlan" disabled />
-            <span class="text-sm text-gray-700 font-medium">Professional Plan (Locked)</span>
+            <span class="text-sm text-gray-700 font-medium"> Basic Plan (Locked)</span>
           </label>
         </div>
         <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
@@ -96,24 +97,24 @@
           <!-- User Info -->
           <div class="px-4 py-2 border-b">
             <p class="text-sm text-gray-600"><strong>User ID:</strong> 3271</p>
-            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> zpro111</p>
+            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> Zoomexa128</p>
           </div>
 
-         <!-- Plan Selection -->
+          <!-- Plan Selection -->
           <div class="px-4 py-3 space-y-2 border-b">
             <label class="flex items-center space-x-2">
               <input type="radio" name="plan" checked disabled class="text-blue-500" />
-              <span class="text-sm text-gray-700 font-medium">Professional Plan (Selected)</span>
+              <span class="text-sm text-gray-700 font-medium">Basic Plan (Selected)</span>
             </label>
             <label class="flex items-center space-x-2 opacity-50 cursor-not-allowed">
               <input type="radio" name="plan" disabled />
-              <span class="text-sm text-gray-700 font-medium">Basic Plan (Locked)</span>
+              <span class="text-sm text-gray-700 font-medium">Professional Plan (Locked)</span>
             </label>
           </div>
 
           <!-- Profile Actions -->
           <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
-          <a href="https://cpapro.github.io/cpapro/home.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Logout</a>
+          <a href="https://cpapro.github.io/cpapro/home.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Sign out</a>
         </div>
       </div>
     </div>
@@ -171,8 +172,8 @@
             </thead>
             <tbody>
               <tr class="hover:bg-gray-50 transition">
-                <td class="py-4 px-6 font-medium">Click and Earn</td>
-                <td class="py-4 px-6 text-blue-600">$0.87 / Click</td>
+                <td class="py-4 px-6 font-medium"> Sales </td>
+                <td class="py-4 px-6 text-blue-600">$0.80 / Click</td>
                 <td class="py-4 px-6">
                   <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
@@ -191,6 +192,13 @@
                   <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
               </tr>
+               <tbody>
+              <tr class="hover:bg-gray-50 transition">
+                <td class="py-4 px-6 font-medium">Get more sales </td>
+                <td class="py-4 px-6 text-blue-600">$0.75 / Click </td>
+                <td class="py-4 px-6">
+                  <span class="bg-green-100 text-green-700 text-xs px-3 py-1 rounded-full">Active</span>
+                </td>
             </tbody>
           </table>
         </div>
@@ -215,15 +223,21 @@
                 </td>
               </tr>
               <tr class="hover:bg-gray-50 transition">
-                <td class="py-4 px-6 font-medium">Click and Earn</td>
+                <td class="py-4 px-6 font-medium">Sales</td>
                 <td class="py-4 px-6">
-                  <span class="bg-red-100 text-red-600 text-xs px-3 py-1 rounded-full">Inactive</span>
+                  <span class="bg-green-100 text-green-600 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
               </tr>
               <tr class="hover:bg-gray-50 transition">
                 <td class="py-4 px-6 font-medium">Survey Complete</td>
                 <td class="py-4 px-6">
                   <span class="bg-red-100 text-red-600 text-xs px-3 py-1 rounded-full">Inactive</span>
+                </td>
+              </tr>
+               <tr class="hover:bg-gray-50 transition">
+                <td class="py-4 px-6 font-medium"> Get more sales </td>
+                <td class="py-4 px-6">
+                  <span class="bg-green-100 text-green-600 text-xs px-3 py-1 rounded-full">Active</span>
                 </td>
               </tr>
             </tbody>
@@ -238,25 +252,12 @@
           <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
             <div class="flex items-center space-x-3">
               <span class="text-2xl">🎉</span>
-              <span class="font-medium text-gray-700">New Offer "Click and Earn" Added!</span>
+              <span class="font-medium text-gray-700">New Offer "Get more sales " Added!</span>
             </div>
-            <span class="text-xs text-gray-500">2 hours ago</span>
+            <span class="text-xs text-gray-500">1 hour ago</span>
           </div>
-          <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
-            <div class="flex items-center space-x-3">
-              <span class="text-2xl">💰</span>
-              <span class="font-medium text-gray-700">Payment of $25 Sent to PayPal</span>
-            </div>
-            <span class="text-xs text-gray-500">1 day ago</span>
-          </div>
-          <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg hover:bg-gray-100 transition">
-            <div class="flex items-center space-x-3">
-              <span class="text-2xl">⚙️</span>
-              <span class="font-medium text-gray-700">Profile Settings Updated</span>
-            </div>
-            <span class="text-xs text-gray-500">3 days ago</span>
-          </div>
-        </div>
+         
+        
       </section>
 
     </main>
