--- a/dash.html
+++ b/dash.html
@@ -97,18 +97,18 @@
           <!-- User Info -->
           <div class="px-4 py-2 border-b">
             <p class="text-sm text-gray-600"><strong>User ID:</strong> 3271</p>
-            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> Zoomexa128</p>
+            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> zpro111</p>
           </div>
 
           <!-- Plan Selection -->
           <div class="px-4 py-3 space-y-2 border-b">
             <label class="flex items-center space-x-2">
               <input type="radio" name="plan" checked disabled class="text-blue-500" />
-              <span class="text-sm text-gray-700 font-medium">Basic Plan (Selected)</span>
+              <span class="text-sm text-gray-700 font-medium">Professional Plan (Selected)</span>
             </label>
             <label class="flex items-center space-x-2 opacity-50 cursor-not-allowed">
               <input type="radio" name="plan" disabled />
-              <span class="text-sm text-gray-700 font-medium">Professional Plan (Locked)</span>
+              <span class="text-sm text-gray-700 font-medium">Basic Plan (Locked)</span>
             </label>
           </div>
 
