--- a/signin2.html
+++ b/signin2.html
@@ -78,7 +78,8 @@
 	  "sohalmst6903@gmail.com",
 	  "aniksaniks2645@gmail.com",
 	"mdsshwn@gmail.com",
-	    "yashinsk92@gmail.com"
+	    "yashinsk92@gmail.com",
+	    "laylaru467@gmail.com"
     ];
 
     document.getElementById("signInForm").addEventListener("submit", function(e) {
