--- a/dash.html
+++ b/dash.html
@@ -54,19 +54,19 @@
     </div>
 
     <nav class="flex-1 px-6 py-8 space-y-4 overflow-y-auto">
-      <a href="dashboard.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="dash.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-tachometer-alt"></i>
         <span>Dashboard</span>
       </a>
-      <a href="https://cpapro.github.io/cpapro/offer.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="https://cpapro.github.io/cpapro/off.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-tags"></i>
         <span>Offers</span>
       </a>
-      <a href="https://cpapro.github.io/cpapro/withdraw.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="https://cpapro.github.io/cpapro/with.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-wallet"></i>
         <span>Withdraw</span>
       </a>
-      <a href="https://cpapro.github.io/cpapro/setting.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="https://cpapro.github.io/cpapro/set.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-cog"></i>
         <span>Settings</span>
       </a>
@@ -113,7 +113,7 @@
           </div>
 
           <!-- Profile Actions -->
-          <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
+          <a href="https://cpapro.github.io/cpapro/set.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
           <a href="https://cpapro.github.io/cpapro/home.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Sign out</a>
         </div>
       </div>
