--- a/off.html
+++ b/off.html
@@ -18,13 +18,13 @@
         <h1 class="text-2xl font-bold text-blue-600">CPA Pro</h1>
       </div>
       <nav class="flex-1 p-6 space-y-4">
-        <a href="dashboard.html" class="flex items-center text-gray-700 hover:text-blue-600 transition">
+        <a href="dash.html" class="flex items-center text-gray-700 hover:text-blue-600 transition">
           <i class="fas fa-home mr-2"></i> Dashboard
         </a>
-        <a href="https://cpapro.github.io/cpapro/offer.html" class="flex items-center text-blue-600 font-semibold">
+        <a href="https://cpapro.github.io/cpapro/off.html" class="flex items-center text-blue-600 font-semibold">
           <i class="fas fa-bullhorn mr-2"></i> Offers
         </a>
-        <a href="https://cpapro.github.io/cpapro/setting.html" class="flex items-center text-gray-700 hover:text-blue-600 transition">
+        <a href="https://cpapro.github.io/cpapro/set.html" class="flex items-center text-gray-700 hover:text-blue-600 transition">
           <i class="fas fa-cog mr-2"></i> Settings
         </a>
         <a href="https://cpapro.github.io/cpapro/home.html" class="flex items-center text-red-500 mt-6">
