--- a/set.html
+++ b/set.html
@@ -15,11 +15,11 @@
         <h1 class="text-2xl font-bold">CPA Pro</h1>
       </div>
       <nav class="mt-10 px-6 space-y-4">
-        <a href="dashboard.html" class="block text-white hover:text-gray-200 transition duration-300">Dashboard</a>
-        <a href="offers.html" class="block text-white hover:text-gray-200 transition duration-300">Offers</a>
-        <a href="withdraw.html" class="block text-white hover:text-gray-200 transition duration-300">Withdraw</a>
-        <a href="settings.html" class="block text-white hover:text-gray-200 transition duration-300 font-bold underline">Settings</a>
-        <a href="signin.html" class="block text-red-500 mt-6">Sign Out</a>
+        <a href="dash.html" class="block text-white hover:text-gray-200 transition duration-300">Dashboard</a>
+        <a href="off.html" class="block text-white hover:text-gray-200 transition duration-300">Offers</a>
+        <a href="with.html" class="block text-white hover:text-gray-200 transition duration-300">Withdraw</a>
+        <a href="set.html" class="block text-white hover:text-gray-200 transition duration-300 font-bold underline">Settings</a>
+        <a href="home.html" class="block text-red-500 mt-6">Sign Out</a>
       </nav>
     </aside>
 
