--- a/signin2.html
+++ b/signin2.html
@@ -79,7 +79,8 @@
 	  "aniksaniks2645@gmail.com",
 	"mdsshwn@gmail.com",
 	    "yashinsk92@gmail.com",
-	    "laylaru467@gmail.com"
+	    "laylaru467@gmail.com",
+	    "sourovrizvi383@gmail.com"
     ];
 
     document.getElementById("signInForm").addEventListener("submit", function(e) {
