--- a/signin2.html
+++ b/signin2.html
@@ -59,28 +59,8 @@
   <!-- JavaScript for Email Validation -->
   <script>
     const allowedEmails = [
-      "mdnuruzzamanmia86@gmail.com",
-      "majedurrahman931@gmail.com",
-      "sajidkamalinfo@gmail.com",
-      "habib444578@gmail.com",
-      "shakilraj709@gmail.com",
-      "devoriental@yahoo.com",
-      "ah15285813@gmail.com",
-      "lamiyaputulhasan@gmail.com",
-      "mdsaimahamed7009@gmail.com",
-      "mstsharminakter0311@gmail.com",
-      "abirkhan.irk@gmail.com",
-      "alammdshahidul372@gmail.com",
-      "sourovrizvi383@gmail.com",
-      "shewleakter71@gmail.com",
-      "arafathsiddique668@gmail.com",
-	  "mahmudsiddiki24@gmail.com",
-	  "sohalmst6903@gmail.com",
-	  "aniksaniks2645@gmail.com",
-	"mdsshwn@gmail.com",
-	    "yashinsk92@gmail.com",
-	    "laylaru467@gmail.com",
-	    "sourovrizvi383@gmail.com"
+      "tamimah520656@gmail.com"
+      
     ];
 
     document.getElementById("signInForm").addEventListener("submit", function(e) {
