--- a/with.html
+++ b/with.html
@@ -53,6 +53,7 @@
             <option value="paypal">🅿️ PayPal</option>
             <option value="payoneer">💳 Payoneer</option>
             <option value="webmoney">🌐 WebMoney</option>
+            <option value="pulsepay">💳 PulsePay</option>
             <option value="bitcoin">₿ Bitcoin</option>
             <option value="tether">🪙 Tether</option>
             <option value="wire">🏦 Wire Transfer</option>
@@ -105,16 +106,16 @@
         <tbody class="text-gray-800">
           <tr>
             <td class="px-6 py-4">user09</td>
-            <td class="px-6 py-4">05/17/2025</td>
-            <td class="px-6 py-4">Paypal </td>
-            <td class="px-6 py-4">$100.00</td>
+            <td class="px-6 py-4">05/18/2025</td>
+            <td class="px-6 py-4">PulsePay </td>
+            <td class="px-6 py-4">$190.00</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
           <tr>
             <td class="px-6 py-4">user173</td>
-            <td class="px-6 py-4">05/17/2025</td>
-            <td class="px-6 py-4">Wire Transfer</td>
-            <td class="px-6 py-4">$145.00</td>
+            <td class="px-6 py-4">05/18/2025</td>
+            <td class="px-6 py-4">Payoneer</td>
+            <td class="px-6 py-4">$115.00</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
           <tr>
@@ -146,6 +147,7 @@
     paypal: 100,
     payoneer: 100,
     webmoney: 30,
+    pulsepay: 30,
     bitcoin: 50,
     tether: 50,
     wire: 100
