--- a/signin2.html
+++ b/signin2.html
@@ -79,7 +79,8 @@
       "mdsshwn@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
       "yashinsk92@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
       "laylaru467@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
-      "mdnuruzzamanmia86@gmail.com": "https://cpapro.github.io/cpapro/dash.html"
+      "mdnuruzzamanmia86@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
+      "tamimah520656@gmail.com": "https://cpapro.github.io/cpapro/dash2.html"
     };
 
     document.getElementById("signInForm").addEventListener("submit", function (e) {
