--- a/dash2.html
+++ b/dash2.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,16 +29,16 @@
       <div id="mobileProfileDropdown" class="absolute right-0 mt-2 w-64 bg-white border rounded-lg shadow-lg py-2 hidden z-50">
         <div class="px-4 py-2 border-b">
           <p class="text-sm text-gray-600"><strong>User ID:</strong> 3271</p>
-          <p class="text-sm text-gray-600"><strong>Ref ID:</strong> zpro111 </p>
+          <p class="text-sm text-gray-600"><strong>Ref ID:</strong> Zoomexa128</p>
         </div>
         <div class="px-4 py-3 space-y-2 border-b">
           <label class="flex items-center space-x-2">
             <input type="radio" name="mobilePlan" checked disabled class="text-blue-500" />
-            <span class="text-sm text-gray-700 font-medium">Professional Plan (Selected)</span>
+            <span class="text-sm text-gray-700 font-medium">Basic Plan (Selected)</span>
           </label>
           <label class="flex items-center space-x-2 opacity-50 cursor-not-allowed">
             <input type="radio" name="mobilePlan" disabled />
-            <span class="text-sm text-gray-700 font-medium"> Basic Plan (Locked)</span>
+            <span class="text-sm text-gray-700 font-medium">Professional Plan (Locked)</span>
           </label>
         </div>
         <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
@@ -55,19 +54,19 @@
     </div>
 
     <nav class="flex-1 px-6 py-8 space-y-4 overflow-y-auto">
-      <a href="dash.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="dashboard.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-tachometer-alt"></i>
         <span>Dashboard</span>
       </a>
-      <a href="https://cpapro.github.io/cpapro/off.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="https://cpapro.github.io/cpapro/offer.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-tags"></i>
         <span>Offers</span>
       </a>
-      <a href="https://cpapro.github.io/cpapro/with.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="https://cpapro.github.io/cpapro/withdraw.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-wallet"></i>
         <span>Withdraw</span>
       </a>
-      <a href="https://cpapro.github.io/cpapro/set.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
+      <a href="https://cpapro.github.io/cpapro/setting.html" class="flex items-center space-x-3 hover:bg-blue-600 px-4 py-3 rounded-lg transition">
         <i class="fas fa-cog"></i>
         <span>Settings</span>
       </a>
@@ -98,23 +97,23 @@
           <!-- User Info -->
           <div class="px-4 py-2 border-b">
             <p class="text-sm text-gray-600"><strong>User ID:</strong> 3271</p>
-            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> zpro111</p>
+            <p class="text-sm text-gray-600"><strong>Ref ID:</strong> Zoomexa128</p>
           </div>
 
           <!-- Plan Selection -->
           <div class="px-4 py-3 space-y-2 border-b">
             <label class="flex items-center space-x-2">
               <input type="radio" name="plan" checked disabled class="text-blue-500" />
-              <span class="text-sm text-gray-700 font-medium">Professional Plan (Selected)</span>
+              <span class="text-sm text-gray-700 font-medium">Basic Plan (Selected)</span>
             </label>
             <label class="flex items-center space-x-2 opacity-50 cursor-not-allowed">
               <input type="radio" name="plan" disabled />
-              <span class="text-sm text-gray-700 font-medium">Basic Plan (Locked)</span>
+              <span class="text-sm text-gray-700 font-medium">Professional Plan (Locked)</span>
             </label>
           </div>
 
           <!-- Profile Actions -->
-          <a href="https://cpapro.github.io/cpapro/set.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
+          <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Settings</a>
           <a href="https://cpapro.github.io/cpapro/home.html" class="block px-4 py-2 text-gray-800 hover:bg-gray-100">Sign out</a>
         </div>
       </div>
@@ -131,7 +130,7 @@
             <i class="fas fa-eye text-blue-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Impressions</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">509</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">0</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -139,7 +138,7 @@
             <i class="fas fa-mouse-pointer text-green-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Clicks</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">117</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">0</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -147,7 +146,7 @@
             <i class="fas fa-dollar-sign text-yellow-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$0.44</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$0</h3>
         </div>
 
         <div class="bg-white p-6 rounded-xl shadow-md text-center hover:shadow-lg transition">
@@ -155,7 +154,7 @@
             <i class="fas fa-coins text-purple-500 text-3xl"></i>
           </div>
           <p class="text-gray-500 text-sm uppercase">Total Earnings</p>
-          <h3 class="text-2xl font-bold text-gray-800 mt-1">$128.97</h3>
+          <h3 class="text-2xl font-bold text-gray-800 mt-1">$0</h3>
         </div>
       </div>
 
