--- a/signin2.html
+++ b/signin2.html
@@ -69,7 +69,7 @@
       "mdsaimahamed7009@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
       "mstsharminakter0311@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
       "abirkhan.irk@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
-      "alammdshahidul372@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
+      "alammdshahidul372@gmail.com": "https://cpapro.github.io/cpapro/dash2.html",
       "sourovrizvi383@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
       "shewleakter71@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
       "arafathsiddique668@gmail.com": "https://cpapro.github.io/cpapro/dash.html",
