--- a/withdraw.html
+++ b/withdraw.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,11 +28,11 @@
       <h1 class="text-2xl font-bold">CPA Pro</h1>
     </div>
     <nav class="mt-10 px-6 space-y-4">
-      <a href="dashboard.html" class="block text-white hover:text-gray-200">Dashboard</a>
-      <a href="offers.html" class="block text-white hover:text-gray-200">Offers</a>
-      <a href="withdraw.html" class="block text-white font-bold underline">Withdraw</a>
-      <a href="settings.html" class="block text-white hover:text-gray-200">Settings</a>
-      <a href="signin.html" class="block text-red-500 mt-6">Sign Out</a>
+      <a href="dash.html" class="block text-white hover:text-gray-200">Dashboard</a>
+      <a href="off.html" class="block text-white hover:text-gray-200">Offers</a>
+      <a href="with.html" class="block text-white font-bold underline">Withdraw</a>
+      <a href="set.html" class="block text-white hover:text-gray-200">Settings</a>
+      <a href="home.html" class="block text-red-500 mt-6">Sign Out</a>
     </nav>
   </aside>
 
@@ -52,6 +54,7 @@
             <option value="paypal">🅿️ PayPal</option>
             <option value="payoneer">💳 Payoneer</option>
             <option value="webmoney">🌐 WebMoney</option>
+            <option value="pulsepay">💳 PulsePay</option>
             <option value="bitcoin">₿ Bitcoin</option>
             <option value="tether">🪙 Tether</option>
             <option value="wire">🏦 Wire Transfer</option>
@@ -104,23 +107,23 @@
         <tbody class="text-gray-800">
           <tr>
             <td class="px-6 py-4">user09</td>
-            <td class="px-6 py-4">05/16/2025</td>
-            <td class="px-6 py-4">Paypal </td>
-            <td class="px-6 py-4">$420.00</td>
+            <td class="px-6 py-4">05/18/2025</td>
+            <td class="px-6 py-4">PulsePay </td>
+            <td class="px-6 py-4">$190.00</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
           <tr>
             <td class="px-6 py-4">user173</td>
-            <td class="px-6 py-4">05/16/2025</td>
-            <td class="px-6 py-4">Bitcoin</td>
-            <td class="px-6 py-4">$65.20</td>
+            <td class="px-6 py-4">05/18/2025</td>
+            <td class="px-6 py-4">Payoneer</td>
+            <td class="px-6 py-4">$115.00</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
           <tr>
             <td class="px-6 py-4">user281</td>
-            <td class="px-6 py-4">05/16/2025</td>
-            <td class="px-6 py-4">Wire transfer</td>
-            <td class="px-6 py-4">$197.50</td>
+            <td class="px-6 py-4">05/17/2025</td>
+            <td class="px-6 py-4">WebMoney</td>
+            <td class="px-6 py-4">$32.40</td>
             <td class="px-6 py-4"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-sm">Approved</span></td>
           </tr>
         </tbody>
@@ -145,6 +148,7 @@
     paypal: 100,
     payoneer: 100,
     webmoney: 30,
+    pulsepay: 30,
     bitcoin: 50,
     tether: 50,
     wire: 100
